magic disk shadow z-index issue

--- a/public/assets/css/main.scss
+++ b/public/assets/css/main.scss
@@ -361,6 +361,7 @@ div.magic-disk {
   div.shadow-c,
   div.shadow-d {
     position: absolute;
+    z-index: 10;
     border-radius: 100%;
   }
 
